--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "g:data": "node generateData.js > api/db.json"
   },
   "private": true,
   "dependencies": {
@@ -41,6 +42,10 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2"
+    "typescript": "~4.1.2",
+    "body-parser": "^1.19.0",
+    "faker": "^5.4.0",
+    "json-server": "^0.16.3",
+    "jsonwebtoken": "^8.5.1"
   }
 }
