--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@angular/compiler": "~11.1.0",
     "@angular/core": "~11.1.0",
     "@angular/forms": "~11.1.0",
+    "@angular/localize": "~11.1.0",
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "angular-in-memory-web-api": "^0.11.0",
+    "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
@@ -34,9 +37,14 @@
     "@angular/compiler-cli": "~11.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "body-parser": "^1.19.0",
     "codelyzer": "^6.0.0",
+    "faker": "^5.4.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
+    "json-server": "^0.16.3",
+    "json-server-auth": "^2.0.2",
+    "jsonwebtoken": "^8.5.1",
     "karma": "~5.2.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
@@ -45,10 +53,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2",
-    "body-parser": "^1.19.0",
-    "faker": "^5.4.0",
-    "json-server": "^0.16.3",
-    "jsonwebtoken": "^8.5.1"
+    "typescript": "~4.1.2"
   }
 }
