--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "angular-in-memory-web-api": "^0.11.0",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.3.0",
     "chart.js": "^2.9.4",
     "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
